# latent_fusion

./: .gitignore  AGENTS.md  EDA.ipynb  EDA_test.ipynb  README.md  TODO.md  attention_test.ipynb  embeddings.ipynb  get_news_temporal_alignment.py  model.py  plan.md  pyproject.toml  technical.py  volatility.ipynb
.github/: copilot-instructions.md
backtest/: backtest_engine.py  hmm_technical_backtest.py  multi_strategy_backtest.py  regime_backtest_comparison.py
checkpoints/: abbv_temporal_fusion.pt  tail_signal_model.pt
docs/: apresentacao.md  ic___rodrigo.txt  model_quant_brief.md  portifolio.md  presentation.md
docs/transformer/: architecture.md  hybrid_overfitting_report.md  overfitting_results.json
features/: implied_volatility_surface.py  technical.py  volatility_regime_indicators.py
images/: analysis_tree_vs_nn.txt  hmm_technical_backtest_metrics.csv  nasdaq_institutional_signals.csv  nasdaq_institutional_trades.csv  rl_overfitting_results.json  strategy_comparison_metrics.csv  tree_vs_nn_analysis.txt
images/implied_vol_surface/: AAPL_clean_option_quotes.csv  AAPL_surface_features.csv
latex/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  results.aux  results.fdb_latexmk  results.fls  results.out  results.tex
models/: hmm_regimes.py  temporal_fusion.py
notebooks/02_embeddings/: embeddings.ipynb
notebooks/03_volatility/: implied_volatility_surface_timeseries.ipynb  volatility_hawkes_hmm_indicators.ipynb
notebooks/04_backtests/: regime_strategy_vs_buyhold.ipynb  (+2 more)
scripts/: _run_multimodal.py  b3_lse_news_scraper.py  b3_news_scraper.py  b3_scraper.py  crypto_scraper.py  lse_b3_fetch.py  scrape_news_content.py  scraper.py
(+89 files in other folders)
