[project]
name = "ic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "langchain-openai>=1.1.11",
    "matplotlib>=3.10.8",
    "momentfm>=0.1.4",
    "openai>=2.29.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.8.0",
    "transformers>=4.33.3",
]
