[project]
name = "ic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.43.5",
    "arch>=8.0.0",
    "fastparquet>=2026.3.0",
    "feedparser>=6.0.12",
    "gymnasium>=1.3.0",
    "hmmlearn>=0.3.3",
    "html2text>=2025.4.15",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain-openai>=1.1.11",
    "lse-data>=0.14.0",
    "matplotlib>=3.10.8",
    "momentfm>=0.1.4",
    "nbconvert>=7.17.0",
    "numpy>=1.25.2",
    "openai>=2.29.0",
    "pandas>=2.1.0",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers==2.3.1",
    "stable-baselines3>=2.9.0",
    "transformers>=4.33.3",
    "yfinance>=1.4.0",
]
